--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,38 +1,4 @@
-# name: Deploy React App to EC2
-
-# on:
-#   push:
-#     branches:
-#       - main
-
-# jobs:
-#   build-and-deploy:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v4
-
-#       - name: Login to Docker Hub
-#         uses: docker/login-action@v3
-#         with:
-#           username: ${{ secrets.DOCKER_USERNAME }}
-#           password: ${{ secrets.DOCKER_PASSWORD }}
-
-#       - name: Build and Push Docker image
-#         run: |
-#           docker build -t myusername/myapp:${{ github.sha }} .
-#           docker push myusername/myapp:${{ github.sha }}
-
-#       - name: Deploy to EC2
-#         uses: appleboy/ssh-action@master
-#         with:
-#           host: ${{ secrets.HOST }}
-#           username: ${{ secrets.USERNAME }}
-#           password: ${{ secrets.PASSWORD }}
-#           script: |
-#             docker pull myusername/myapp:${{ github.sha }}
-#             docker-compose up -d
-
-name: have a try
+name: Deploy React App to EC2
 
 on:
   push:
@@ -40,8 +6,42 @@ on:
       - main
 
 jobs:
-  job1:
-    runs-on: ubuntu-lastest
+  build-and-deploy:
+    runs-on: ubuntu-latest
     steps:
-      - name: something
-        run: ls
+      - uses: actions/checkout@v4
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and Push Docker image
+        run: |
+          docker build -t myusername/myapp:${{ github.sha }} .
+          docker push myusername/myapp:${{ github.sha }}
+
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          script: |
+            docker pull myusername/myapp:${{ github.sha }}
+            docker-compose up -d
+
+# name: have a try
+
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   job1:
+#     runs-on: ubuntu-lastest
+#     steps:
+#       - name: something
+#         run: ls
