--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,47 +1,25 @@
-name: Deploy React App to EC2
+name: ci
 
 on:
   push:
     branches:
-      - main
+      - "main"
 
 jobs:
-  build-and-deploy:
+  docker:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and Push Docker image
-        run: |
-          docker build -t myusername/myapp:${{ github.sha }} .
-          docker push myusername/myapp:${{ github.sha }}
-
-      - name: Deploy to EC2
-        uses: appleboy/ssh-action@master
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v5
         with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          script: |
-            docker pull myusername/myapp:${{ github.sha }}
-            docker-compose up -d
-
-# name: have a try
-
-# on:
-#   push:
-#     branches:
-#       - main
-
-# jobs:
-#   job1:
-#     runs-on: ubuntu-lastest
-#     steps:
-#       - name: something
-#         run: ls
+          push: true
+          tags: user/app:latest
