--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,9 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
+            docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/nestaway
             docker stop nestaway || true
             docker rm nestaway || true
             docker run -d --name nestaway -p 5000:5173 ${{ secrets.DOCKERHUB_USERNAME }}/nestaway
+            docker logout
