--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/nestaway:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/nestaway-frontend:latest
       - name: ec2
         uses: appleboy/ssh-action@v1.0.3
         with:
