--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
           script: |
             cd /opt/nestaway
             docker compose stop
-            docker compose up -d
+            docker compose up -d --pull always
 
             # docker pull ${{ secrets.DOCKERHUB_USERNAME }}/nestaway-frontend
             # docker stop nestaway || true
