--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            docker image prune
+            docker image prune -af
             cd /opt/nestaway
             docker compose stop
             docker compose up -d --pull always
